Fixing white space under footer

--- a/css/extra/scrolling-nav.css
+++ b/css/extra/scrolling-nav.css
@@ -59,8 +59,8 @@ of those sections to manage the look and feel of the site. */
     background: #eee;
 }
 .footer-section {
-    height: 40px;
-    padding-top: 15px;
+    height: 15px;
+    padding-top: 500px;
     text-align: center;
     background: #000;
 }
